<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TextView
        android:id="@+id/greeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/guideline"
        tools:text="greeting"/>

    <TextClock
        android:id="@+id/dateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/greeting"
        tools:text="dateTime"
        tools:targetApi="jelly_bean_mr1" />

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_percent="0.5"
        android:orientation="horizontal"/>

    <Button
        android:id="@+id/carbCalcButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/insulin_calc"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/guideline"
        android:onClick="openCarbCalculator"/>

    <Button
        android:id="@+id/correctionDoseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/correction_dose_calculator"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carbCalcButton"
        android:onClick="openInsulinCorrectionDoseCalculator"/>

    <Button
        android:id="@+id/glucoseDoseButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/glucose_correction_dose_calculator"
        android:layout_marginTop="24dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/correctionDoseButton"
        android:onClick="openGlucoseCorrectionDoseCalculator"/>

</androidx.constraintlayout.widget.ConstraintLayout>