<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CarbCalculator">

    <TextClock
        android:id="@+id/carbDateTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:layout_margin="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="dateTime"
        tools:targetApi="jelly_bean_mr1" />

    <TextView
        android:id="@+id/currentCarbConversion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:textAlignment="center"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/carbDateTime"
        tools:text="current conversion rate"
        android:gravity="center_horizontal" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="For "
        app:layout_constraintEnd_toStartOf="@id/txtCarbAmount"
        app:layout_constraintTop_toTopOf="@id/txtCarbAmount"
        app:layout_constraintBottom_toBottomOf="@id/txtCarbAmount"
        tools:text="For "/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/g"
        app:layout_constraintStart_toEndOf="@id/txtCarbAmount"
        app:layout_constraintTop_toTopOf="@id/txtCarbAmount"
        app:layout_constraintBottom_toBottomOf="@id/txtCarbAmount"
        tools:text="g"/>

    <androidx.constraintlayout.widget.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline"
        app:layout_constraintGuide_percent="0.3"
        android:orientation="horizontal"/>

    <EditText
        android:id="@+id/txtCarbAmount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="4"
        android:maxLength="5"
        android:inputType="number"
        android:layout_marginBottom="8dp"
        android:hint="@string/carbs"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@id/guideline"
        app:layout_constraintBottom_toBottomOf="@id/guideline" />

    <TextView
        android:id="@+id/lblYouNeed"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:text="@string/you_need"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/txtCarbAmount"
        tools:text="You need"/>

    <TextView
        android:id="@+id/insulinDose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="48sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/lblYouNeed"
        tools:text="insulin dose"/>

</androidx.constraintlayout.widget.ConstraintLayout>